--- a/generators/app/templates/common/app/src/main/res/values/dimens.xml
+++ b/generators/app/templates/common/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="row_entry">32dp</dimen>
+    <dimen name="placeholder_size">192dp</dimen>
 </resources>
