--- a/generators/app/templates/common/app/src/main/res/layout/main_activity.xml
+++ b/generators/app/templates/common/app/src/main/res/layout/main_activity.xml
@@ -10,12 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"/>
 
-    <ImageView
-        android:id="@+id/image"
+    <FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="@dimen/placeholder_size"
-        android:layout_margin="@dimen/activity_margin"
-        android:layout_gravity="center"/>
+        android:layout_height="match_parent"
+        android:id="@+id/fragment"/>
 
 </LinearLayout>
