--- a/generators/app/templates/common/app/src/main/res/layout/start_fragment.xml
+++ b/generators/app/templates/common/app/src/main/res/layout/start_fragment.xml
@@ -7,9 +7,21 @@
     android:layout_gravity="center"
     android:gravity="center">
 
+    <EditText
+        android:id="@+id/username"
+        android:layout_width="192dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/username"/>
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="192dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/password"/>
+
     <Button
         android:id="@+id/login"
-        android:layout_width="wrap_content"
+        android:layout_width="192dp"
         android:layout_height="wrap_content"
         android:text="@string/login"/>
 
